# N_body_problem

./: CMakeLists.txt  Uwagi Ryszard Kobiera.txt  main.cpp
ImGUI_custom_bundle/: imgui.ini
ImGUI_custom_bundle/context_setup/: context_setup.cpp  context_setup.h
